--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="htmlhome">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Caleb Sun is a visual designer and student at Carnegie Mellon University. He is currently a Brand Design Intern at Dropbox.">
+    <meta name="description" content="Sydney Sun is a architect and designer">
     <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
     <meta name="robots" content="all">
     <!---declares what kinds of characters are supportive-->
@@ -38,7 +38,7 @@
             <img src="images/placeholder.png">
             
             <!--PAGE TITLE-->
-            <h1>rahhhhhh</h1> 
+            <h1>Page Title</h1> 
             
             <!--DESCRIPTION-->
             <p>This is a parag</p>
