--- a/art.html
+++ b/art.html
@@ -35,7 +35,7 @@
         <!--BANNER-->
         <section class="banner">
             <!--BACKGROUND IMAGE-->
-            <img src="images/placeholder.png">
+            <img src="images/banners/lily pond.jpg">
             
             <!--PAGE TITLE-->
             <h1>Art</h1> 
