--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
 
              <a  href="#" 
-                style="background-image: url(images/cover/site\ diagram-01.png);">
+                style="background-image: url(images/cover/site\ diagram.png);">
                 <div>
                      <!--PROJECT TITLE-->
                     <h2>Uphams Corner Library</h2> 
