--- a/projects/mechanic.html
+++ b/projects/mechanic.html
@@ -46,7 +46,7 @@
         </section>
 
         <div class="full-width">
-          <img src="../images/placeholder.png">
+          <img src="../images/projects/8_mechanic/perspective render.jpg">
             <sub>This is a caption</sub>
         </div>
        
