--- a/art.html
+++ b/art.html
@@ -41,7 +41,7 @@
             <h1>Art</h1> 
             
             <!--DESCRIPTION-->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p>Art inspired by the beauty found in everyday life. Gouache, ink, block print, etc. </p>
         </section>
 
         <!--PROJECTS-->
