--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <img src="images/banners/court int.png">
             
             <!--PAGE TITLE-->
-            <h1>Page Title</h1> 
+            <h1>architecture</h1> 
             
             <!--DESCRIPTION-->
-            <p>This is a parag</p>
+            <p>Architecture that enhances human connection and our relationship with the natural world.</p>
         </section>
 
         <!--PROJECTS-->
@@ -80,7 +80,7 @@
             </a>
 
             <a  href="#" 
-                style="background-image: url(images/placeholder.png);">
+                style="background-image: url(images/cover/pond.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
                     <h2>Serenity Pond</h2> 
