--- a/projects/mechanic.html
+++ b/projects/mechanic.html
@@ -70,10 +70,10 @@
 
     <footer>
         <ul class="footer-items">
-            <a href="#" target="_blank">Resume</a>
-            <a href="#" target="_blank">PDF Portfolio</a>
-            <a href="#" target="_blank">Email</a>
-            <a href="#" target="_blank">Linkedin</a>
+            <a href="pdf/Sydney Sun_Resume.pdf" target="_blank">Resume</a>
+            <a href="pdf/Sydney Sun_Portfolio.pdf" target="_blank">PDF Portfolio</a>
+            <a href=mailto:sydneysun108@gmail.com>Email</a>
+            <a href="https://www.linkedin.com/in/sydney-sun-aab2b919a/" target="_blank">Linkedin</a>
         </ul>
         <sub>Updated October 2025<br>&copy; Sydney Sun</sub>
     </footer>
