--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>  
   <body>
     <header>
-        <a class="header-logo">
+        <a class="header-logo" href="#">
             <img src="images/logo.png">
         </a>
         <ul class="header-items">
@@ -46,7 +46,7 @@
 
         <!--PROJECTS-->
         <section class="projects">
-            <a  href="#"
+            <a  href="projects/mechanic.html"
                 style="background-image: url(images/cover/perspective\ render.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -131,6 +131,19 @@
                     
                     <!--DESCRIPTION-->
                     <p>Residential Building Performance Analysis and Retrofit Recommendations</p>
+                </div>
+            </a>
+
+            <!--EXAMPLE COMING SOON PROJECT-->
+            <a  href="#" 
+                style="background-image: url(images/placeholder.png);"
+                class="coming-soon">
+                <div>
+                     <!--PROJECT TITLE-->
+                    <h2>Chen Residence Analysis</h2> 
+                    
+                    <!--DESCRIPTION-->
+                    <p>Coming Soon</p>
                 </div>
             </a>
 
