--- a/projects/mechanic.html
+++ b/projects/mechanic.html
@@ -21,14 +21,14 @@
   </head>  
   <body class="project-page">
     <header>
-        <a class="header-logo">
+        <a class="header-logo" href="../index.html">
             <img src="../images/logo.png">
         </a>
         <ul class="header-items">
-            <a href="#" class="active">Architecture</a>
-            <a href="art.html">Art</a>
-            <a href="design.html">Design</a>
-            <a href="about.html">About</a>
+            <a href="../index.html" class="active">Architecture</a>
+            <a href="../art.html">Art</a>
+            <a href="../design.html">Design</a>
+            <a href="../about.html">About</a>
         </ul>
     </header>
 
