--- a/art.html
+++ b/art.html
@@ -21,7 +21,7 @@
   </head>  
   <body>
     <header>
-        <a class="header-logo">
+        <a class="header-logo" href="index.html">
             <img src="images/logo.png">
         </a>
         <ul class="header-items">
