--- a/projects/mechanic.html
+++ b/projects/mechanic.html
@@ -47,23 +47,27 @@
 
         <div class="full-width">
           <img src="../images/projects/8_mechanic/perspective render.jpg">
-            <sub>This is a caption</sub>
+            <sub>Render</sub>
         </div>
-       
-
+      
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Mechanic Coffee Patio is a patio addition between the main cafe building and the pottery studio behind the cafe. Irregularly shaped planting areas create pockets of seating, inviting customers to immerse themselves in the garden. A single mid-sized tree provides an anchor for the space, while simultaneously shielding view of the driveway beyond the path. <br><br>
+          Construction is underway for the patio and is projected to be finished by the end of November 2025.
         </p>
 
         <div class="image-row">
-          <div class="half-width">
-            <img src="../images/placeholder.png">
-            <sub>This is a caption</sub>
+          <div class="half-width large-portrait">
+            <img src="../images/projects/8_mechanic/plan.png">
+            <!-- <sub>This is a caption</sub> -->
           </div>
-          <div class="half-width">
-            <img src="../images/placeholder.png">
-            <sub>This is a caption</sub>
+          <div class="half-width large-portrait">
+            <img src="../images/projects/8_mechanic/sections.png">
+            <!-- <sub>This is a caption</sub> -->
           </div>
+        </div>
+        <div class="full-width">
+          <img src="../images/projects/8_mechanic/final diagrams.png">
+            <!-- <sub>This is a caption</sub> -->
         </div>
 
     </main>
