--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </a>
 
-             <a  href="#" 
+            <a  href="projects/uphams.html" 
                 style="background-image: url(images/cover/site\ diagram.png);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -68,7 +68,7 @@
                 </div>
             </a>
 
-            <a  href="#" 
+            <a  href="projects/domesticating-bigness.html" 
                 style="background-image: url(images/cover/tower\ w\ people.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -79,7 +79,7 @@
                 </div>
             </a>
 
-            <a  href="#" 
+            <a  href="projects/random.html" 
                 style="background-image: url(images/cover/pond.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -90,7 +90,7 @@
                 </div>
             </a>
 
-            <a  href="#" 
+            <a  href="projects/booth.html" 
                 style="background-image: url(images/cover/DSC09264.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -101,7 +101,7 @@
                 </div>
             </a>
 
-            <a  href="#" 
+            <a  href="projects/nodule.html" 
                 style="background-image: url(images/cover/IMG_2487.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
@@ -135,8 +135,7 @@
             </a>
 
             <!--EXAMPLE COMING SOON PROJECT-->
-            <a  href="#" 
-                style="background-image: url(images/placeholder.png);"
+            <a  style="background-image: url(images/placeholder.png);"
                 class="coming-soon">
                 <div>
                      <!--PROJECT TITLE-->
