--- a/projects/00_template.html
+++ b/projects/00_template.html
@@ -44,7 +44,8 @@
 
             <sub>2025<br> <!--Time-->
               Solo Designer<br> <!--Role-->
-              Under Construction</sub> <!--Status-->
+              Under Construction
+            </sub> <!--Status-->
         </section>
 
         <!--ONE IMAGE ROW-->
