--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <h1>About</h1> 
                 
                 <!--DESCRIPTION-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <p>Website currently undergoing maintenance, please check back later. </p>
             
                 <!--ADD CONTACT INFO-->
             </div>
