--- a/design.html
+++ b/design.html
@@ -35,13 +35,16 @@
         <!--BANNER-->
         <section class="banner">
             <!--BACKGROUND IMAGE-->
-            <img src="images/placeholder.png">
+            <img src="images/banners/IMG_8370.JPG">
             
             <!--PAGE TITLE-->
             <h1>Design</h1> 
             
             <!--DESCRIPTION-->
-            <p>Explorations of design in fashion, furniture, and objects. </p>
+            <p>Explorations of design in fashion, furniture, and objects. 
+                <br><br>
+                Website currently undergoing maintenance, please check back later.
+            </p>
         </section>
 
         <!--PROJECTS-->
