--- a/projects/domesticating-bigness.html
+++ b/projects/domesticating-bigness.html
@@ -38,15 +38,17 @@
             <h1>Domesticating Bigness</h1> 
             
             <!--DESCRIPTION-->
-            <p>Mass Timber Construction with Double Skin Facade</p>
+            <p>Modular Social Housing and Urban Garden</p>
 
-            <sub>2025 (Re-Work of 2023 Project)<br>
+            <sub>2023<br>
               Solo Designer</sub>
         </section>
 
-        <div class="full-width">
-          <img src="../images/projects/domesticating-bigness/tower-axo.png">
-            <sub>Render</sub>
+        <div class="image-row">
+          <div class="half-width">
+            <img src="../images/projects/6_domesticating-bigness/tower-axo.png">
+            <sub>Section Axon Render</sub>
+          </div>
         </div>
       
         <p>
@@ -57,86 +59,86 @@
 
         <div class="image-row">
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections06.png">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections06.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections05.png">
-            <!-- <sub>This is a caption</sub> -->
-          </div>
-        </div>
-
-        <div class="image-row">
-          <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections02.png">
-            <!-- <sub>This is a caption</sub> -->
-          </div>
-          <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections01.png">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections05.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
 
         <div class="image-row">
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections03.png">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections02.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/unit-plan-sections04.png">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections01.png">
+            <!-- <sub>This is a caption</sub> -->
+          </div>
+        </div>
+
+        <div class="image-row">
+          <div class="half-width">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections03.png">
+            <!-- <sub>This is a caption</sub> -->
+          </div>
+          <div class="half-width">
+            <img src="../images/projects/6_domesticating-bigness/unit-plan-sections04.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
 
         <div class="image-row">
           <div class="thirty-width">
-            <img src="../images/projects/domesticating-bigness/communal-plan-section01.png">
+            <img src="../images/projects/6_domesticating-bigness/communal-plan-section01.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="thirty-width">
-            <img src="../images/projects/domesticating-bigness/communal-plan-section02.png">
+            <img src="../images/projects/6_domesticating-bigness/communal-plan-section02.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="thirty-width">
-            <img src="../images/projects/domesticating-bigness/communal-plan-section03.png">
+            <img src="../images/projects/6_domesticating-bigness/communal-plan-section03.png">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
 
         <div class="image-row">
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/domesticating-bigness01.jpg">
+            <img src="../images/projects/6_domesticating-bigness/domesticating-bigness01.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/domesticating-bigness02.jpg">
+            <img src="../images/projects/6_domesticating-bigness/domesticating-bigness02.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
 
         <div class="image-row">
           <div class="sixty-width large-landscape">
-            <img src="../images/projects/domesticating-bigness/court1.jpg">
+            <img src="../images/projects/6_domesticating-bigness/court1.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="thirty-width">
-            <img src="../images/projects/domesticating-bigness/court2.jpg">
+            <img src="../images/projects/6_domesticating-bigness/court2.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
 
         <div class="full-width">
-          <img src="../images/projects/domesticating-bigness/courtint.png">
+          <img src="../images/projects/6_domesticating-bigness/courtint.png">
             <sub>Render</sub>
         </div>
 
         <div class="image-row">
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/int3.jpg">
+            <img src="../images/projects/6_domesticating-bigness/int3.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
           <div class="half-width">
-            <img src="../images/projects/domesticating-bigness/int2.jpg">
+            <img src="../images/projects/6_domesticating-bigness/int2.jpg">
             <!-- <sub>This is a caption</sub> -->
           </div>
         </div>
