--- a/projects/uphams.html
+++ b/projects/uphams.html
@@ -45,53 +45,58 @@
         </section>
 
         <div class="full-width">
-          <img src="../images/projects/uphams/approach-watercolor.jpg">
+          <img src="../images/projects/7_uphams/approach-watercolor.jpg">
             <sub>Render</sub>
         </div>
       
         <p>
           Uphams Corner Library and Cultural Center redefines and emphasizes the value of a library in modern times. The cultural center fosters a welcoming, close knit community in Boston’s historic Dorchester neighborhood — a culturally diverse and artistic neighborhood. The cultural center is divided into four main areas: the main plaza, a library, a makerspace, and an apartment building situated at the back of the site. 
+          <br><br>
+          The street facing, west-facing facades are all glass double skin facade systems. Not only does this allow for exposure and connection with the public, the double skin facade system operates to passively regulate temperatures in the building, reducing the mechanical heating and cooling load. Coupled with the mass timber construction of the building structure, this building aims to reduce the negative environmental impacts of architecture. 
+          <br><br>
+          The circulation of the building emphasizes the connection to the public, while allowing for more secluded moments further within the structure. Though the front facade encourages connection, the east side of the library faces the nearby cemetery park, a more tranquil and private area that provides solitude. 
+
         </p>
 
         <div class="full-width large-landscape">
-          <img src="../images/projects/uphams/site-diagram-01.png">
-            <sub>Render</sub>
+          <img src="../images/projects/7_uphams/site-diagram-01.jpg">
+            <sub>Site Diagram</sub>
+        </div>
+
+        <div class="full-width">
+          <img src="../images/projects/7_uphams/plans.jpg">
+            <sub>Plans</sub>
         </div>
 
         <div class="full-width large-landscape">
-          <img src="../images/projects/uphams/plans.png">
-            <sub>Render</sub>
+          <img src="../images/projects/7_uphams/elevations.jpg">
+            <sub>Elevations</sub>
         </div>
 
-        <div class="full-width large-landscape">
-          <img src="../images/projects/uphams/elevations.png">
-            <sub>Render</sub>
-        </div>
-
-        <div class="full-width large-landscape">
-          <img src="../images/projects/uphams/sections.png">
-            <sub>Render</sub>
+        <div class="full-width">
+          <img src="../images/projects/7_uphams/sections.png">
+            <sub>Section</sub>
         </div>
 
         <div class="image-row">
-          <div class="sixty-width large-landscape">
-            <img src="../images/projects/uphams/axo-diagram-01.png">
-            <!-- <sub>This is a caption</sub> -->
+          <div class="sixty-width">
+            <img src="../images/projects/7_uphams/axo-diagram-01.jpg">
+            <sub>Public - Private Relationship</sub>
           </div>
-          <div class="thirty-width large-portrait">
-            <img src="../images/projects/uphams/adaptable-space.png">
-            <!-- <sub>This is a caption</sub> -->
+          <div class="thirty-width">
+            <img src="../images/projects/7_uphams/ADAPTABLE SPACE2.jpg">
+            <sub>Gathering Plaza Event Diagram</sub>
           </div>
         </div>
 
         <div class="image-row">
           <div class="half-width large-portrait">
-            <img src="../images/projects/uphams/enclosure-diagram.png">
-            <!-- <sub>This is a caption</sub> -->
+            <img src="../images/projects/7_uphams/enclosure-diagram.png">
+            <sub>Enclosure Detail and Double Skin Facade Thermal Regulation</sub>
           </div>
           <div class="half-width large-portrait">
-            <img src="../images/projects/uphams/structure-diagram.png">
-            <!-- <sub>This is a caption</sub> -->
+            <img src="../images/projects/7_uphams/structure-diagram.png">
+            <sub>Structure Detail </sub>
           </div>
         </div>
         
