--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
             </a>
 
-            <a  href="projects/random.html" 
+            <a  href="projects/serenity-pond.html" 
                 style="background-image: url(images/cover/pond.jpg);">
                 <div>
                      <!--PROJECT TITLE-->
