--- a/projects/mechanic.html
+++ b/projects/mechanic.html
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="full-width">
-          <img src="../images/projects/8_mechanic/final diagrams.png">
+          <img src="../images/projects/8_mechanic/final diagrams.jpg">
             <!-- <sub>This is a caption</sub> -->
         </div>
 
